--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="effective solutions for your business" />
 
-    <title>goit-markup-hw-04</title>
+    <title>goit-markup-hw-05</title>
 
     <link
       rel="stylesheet"
@@ -511,8 +511,99 @@
               </a>
             </li>
           </ul>
+          <!-- footer form -->
+        </div>
+
+        <div class="footer-form">
+          <p class="footer-form-text">Subscribe</p>
+          <form class="form-subscribe" name="subscribe">
+            <label class="form-subscribe-label" for="user-email">
+              <input
+                class="form-subscribe-input"
+                type="email"
+                placeholder="E-mail"
+                name="contact_email"
+            /></label>
+            <button class="form-subscribe-button" type="submit">
+              Subscribe
+              <svg class="form-subscribe-ikon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
+
+    <!-- modal window -->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-btn" type="button" aria-label="Modal close button">
+          <svg class="x-button" width="8" height="8">
+            <use href="./images/icons.svg#icon-closebatton"></use>
+          </svg>
+        </button>
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="modal-form form" name="modal">
+          <div class="form-wrapper">
+            <label class="label-form" for="user_name">Name</label>
+            <div class="form-field">
+              <input
+                class="input-form"
+                type="text"
+                name="user_name"
+                id="user_name" />
+
+              <svg class="form-ikon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-name"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-wrapper">
+            <label class="label-form" for="user-phone"> Phone </label>
+            <div class="form-field">
+              <input
+                class="input-form"
+                type="tel"
+                name="contact_tel"
+                id="user-phone" />
+              <svg class="form-ikon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="form-wrapper">
+            <label class="label-form" for="user-email"> Email</label>
+            <div class="form-field">
+              <input
+                class="input-form"
+                type="email"
+                name="contact_email"
+                id="user-email" />
+              <svg class="form-ikon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div>
+            <label class="label-form" for="user-comment"> Comment</label>
+            <textarea
+              class=""
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input">
+            </textarea>
+          </div>
+
+          <div></div>
+          <button type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
