--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 
           <div class="modal-form-checkbox">
             <input
-              class="checkbox"
+              class="checkbox visually-hidden"
               type="checkbox"
               name="user_agreement"
               value="false"
