--- a/index.html
+++ b/index.html
@@ -517,15 +517,13 @@
         <div class="footer-form">
           <p class="footer-form-text">Subscribe</p>
           <form class="form-subscribe" name="subscribe">
-            <label
-              class="form-subscribe-label"
-              for="user-email"
-              id="contact_email">
+            <label class="form-subscribe-label" for="user_email">
               <input
                 class="form-subscribe-input"
                 type="email"
                 placeholder="E-mail"
                 name="contact_email"
+                id="user_email"
             /></label>
             <button class="form-subscribe-button" type="submit">
               Subscribe
