--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 class="form-subscribe-input"
                 type="email"
                 placeholder="E-mail"
-                name="contact_email"
+                name="user_email"
                 id="user_email"
             /></label>
             <button class="form-subscribe-button" type="submit">
@@ -537,7 +537,7 @@
     </footer>
 
     <!-- modal window -->
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-btn" type="button" aria-label="Modal close button">
           <svg class="x-button" width="8" height="8">
@@ -549,15 +549,15 @@
         </p>
         <form class="modal-form form" name="modal">
           <div class="form-wrapper">
-            <label class="label-form" for="user_name">Name</label>
+            <label class="label-form" for="user-name">Name</label>
             <div class="form-field">
               <input
                 class="input-form"
                 type="text"
-                name="user_name"
-                id="user_name" />
+                name="user-name"
+                id="user-name" />
 
-              <svg class="form-ikon" width="18" height="18">
+              <svg class="form-ikon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-name"></use>
               </svg>
             </div>
@@ -591,7 +591,7 @@
             </div>
           </div>
 
-          <div class="form-wrapper">
+          <div class="form-wrapper-comment">
             <label class="label-form" for="user-comment"> Comment</label>
             <textarea
               class="form-messege"
@@ -604,11 +604,11 @@
             <input
               class="checkbox visually-hidden"
               type="checkbox"
-              name="user_agreement"
-              value="false"
-              id="user_agreement" />
+              name="user-privacy"
+              value="true"
+              id="user-privacy" />
 
-            <label class="form-agreement" for="user_agreement">
+            <label class="form-agreement" for="user-privacy">
               <span class="form-agreemt-checkbox">
                 <svg class="form-agreement-ikon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector"></use>
