--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
     </footer>
 
     <!-- modal window -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-btn" type="button" aria-label="Modal close button">
           <svg class="x-button" width="8" height="8">
