--- a/index.html
+++ b/index.html
@@ -517,13 +517,13 @@
         <div class="footer-form">
           <p class="footer-form-text">Subscribe</p>
           <form class="form-subscribe" name="subscribe">
-            <label class="form-subscribe-label" for="user_email">
+            <label class="form-subscribe-label" for="user-email">
               <input
                 class="form-subscribe-input"
                 type="email"
                 placeholder="E-mail"
-                name="user_email"
-                id="user_email"
+                name="user-email"
+                id="user-email"
             /></label>
             <button class="form-subscribe-button" type="submit">
               Subscribe
